--- a/src/main/webapp/app/components/login/login.html
+++ b/src/main/webapp/app/components/login/login.html
@@ -1,11 +1,10 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
             ng-click="vm.cancel()">&times;</button>
-    <h4 class="modal-title">Sign in</h4>
 </div>
 <div class="modal-body">
     <div class="row">
-        <div class="col-md-4 col-md-offset-4">
+        <div class="text-center">
             <h1>Sign in</h1>
         </div>
         <div class="col-md-8 col-md-offset-2">
@@ -13,11 +12,12 @@
                 <strong>Failed to sign in!</strong> Please check your credentials and try again.
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-8 col-md-offset-2">
             <form class="form" role="form" ng-submit="vm.login($event)">
                 <div class="form-group">
                     <label for="username">Login</label>
-                    <input type="text" class="form-control" id="username" placeholder="Your username" ng-model="vm.username">
+                    <input type="text" class="form-control" id="username" placeholder="Your username"
+                           ng-model="vm.username">
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
@@ -30,22 +30,25 @@
                         <span>Remember me</span>
                     </label>
                 </div>
-                <button type="submit" class="btn btn-primary">Sign in</button>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary">Sign in</button>
+                </div>
             </form>
             <p></p>
             <div class="alert alert-warning">
                 <a class="alert-link" href="" ng-click="vm.requestResetPassword()">Did you forget your password?</a>
             </div>
             <div class="alert alert-warning">
-                You don't have an account yet? <a class="alert-link" href="" ng-click="vm.register()">Register a new account</a>
+                You don't have an account yet? <a class="alert-link" href="" ng-click="vm.register()">Register a new
+                account</a>
             </div>
         </div>
-        <div class="col-md-6">
+        <!--<div class="col-md-6">
             <br/>
             <jh-social ng-provider="google"></jh-social>
             <jh-social ng-provider="facebook"></jh-social>
             <jh-social ng-provider="twitter"></jh-social>
-            <!-- jhipster-needle-add-social-button -->
-        </div>
+            &lt;!&ndash; jhipster-needle-add-social-button &ndash;&gt;
+        </div>-->
     </div>
 </div>
