add an algorithm to a category

--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -14,8 +14,13 @@
         <div class="navbar-collapse" uib-collapse="vm.isNavbarCollapsed" ng-switch="vm.isAuthenticated()">
             <ul class="nav navbar-nav navbar-right">
                 <li ui-sref-active="active">
+                    <a ui-sref="algorithm" ng-click="vm.collapseNavbar()">
+                        <span>Algorithm</span>
+                    </a>
+                </li>
+                <li ui-sref-active="active">
                     <a ui-sref="customPlugins" ng-click="vm.collapseNavbar()">
-                        <span class="hidden-sm">Plugins</span>
+                        <span>Plugins</span>
                     </a>
                 </li>
                 <!-- jhipster-needle-add-element-to-menu - JHipster will add new menu items here -->
@@ -23,7 +28,7 @@
                     uib-dropdown class="dropdown pointer">
                     <a class="dropdown-toggle" uib-dropdown-toggle href="" id="entity-menu">
                         <span>
-                            <span class="hidden-sm">
+                            <span>
                                 Entities
                             </span>
                             <b class="caret"></b>
@@ -41,7 +46,7 @@
                 <li ng-class="{active: vm.$state.includes('account')}" uib-dropdown class="dropdown pointer">
                     <a class="dropdown-toggle" uib-dropdown-toggle href="" id="account-menu">
                         <span>
-                            <span class="hidden-sm">
+                            <span>
                                 Account
                             </span>
                             <b class="caret"></b>
@@ -79,7 +84,7 @@
                     uib-dropdown class="dropdown pointer">
                     <a class="dropdown-toggle" uib-dropdown-toggle href="" id="admin-menu">
                         <span>
-                            <span class="hidden-sm">Administration</span>
+                            <span>Administration</span>
                             <b class="caret"></b>
                         </span>
                     </a>
