--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -7,9 +7,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/" ng-click="vm.collapseNavbar()">
-                <span>KSKBLOG</span>
-            </a>
+            <!--<h1 class="navbar-brand">KSKBLOG</h1>-->
+            <h1 class="navbar-brand">
+                <a  href="#/" ng-click="vm.collapseNavbar()">
+                    KSKBLOG
+                </a>
+            </h1>
         </div>
         <div class="navbar-collapse" uib-collapse="vm.isNavbarCollapsed" ng-switch="vm.isAuthenticated()">
             <ul class="nav navbar-nav navbar-right">
