--- a/src/main/webapp/scss/main.scss
+++ b/src/main/webapp/scss/main.scss
@@ -3,5 +3,4 @@
 
 @import "app/page/profile";
 @import "app/page/algorithm";
-@import "app/page/main";
-@import "app/page/story";
+@import "app/page/skgodi";
