--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -9,15 +9,20 @@
             </button>
             <h1 class="navbar-brand">
                 <a  href="/" ng-click="vm.collapseNavbar()">
-                    Web Front-end
+                    KSKBLOG
                 </a>
             </h1>
         </div>
         <div class="navbar-collapse" uib-collapse="vm.isNavbarCollapsed" ng-switch="vm.isAuthenticated()">
             <ul class="nav navbar-nav navbar-right">
-                <li ui-sref-active="active">
+                <!--<li ui-sref-active="active">
                     <a ui-sref="story" ng-click="vm.collapseNavbar()">
                         <span>Stroy</span>
+                    </a>
+                </li>-->
+                <li ui-sref-active="active">
+                    <a ui-sref="skgodi" ng-click="vm.collapseNavbar()">
+                        <span>SK godi</span>
                     </a>
                 </li>
                 <li ui-sref-active="active">
@@ -40,12 +45,7 @@
                         <span>Plugins</span>
                     </a>
                 </li>
-                <li ui-sref-active="active">
-                    <a ui-sref="profile" ng-click="vm.collapseNavbar()">
-                        <span>MasterProfile</span>
-                    </a>
-                </li>
-                <!-- jhipster-needle-add-element-to-menu - JHipster will add new menu items here -->
+
                 <li ng-class="{active: vm.$state.includes('entity')}" ng-switch-when="true" has-authority="ROLE_ADMIN"
                     uib-dropdown class="dropdown pointer">
                     <a class="dropdown-toggle" uib-dropdown-toggle id="entity-menu" role="button">
@@ -62,12 +62,12 @@
                                 <span>Contact</span>
                             </a>
                         </li>
-                        <li ui-sref-active="active" >
+                        <!--<li ui-sref-active="active" >
                             <a ui-sref="board" ng-click="vm.collapseNavbar()">
                                 <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
                                 <span >Board</span>
                             </a>
-                        </li>
+                        </li>-->
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
@@ -152,7 +152,6 @@
                                 <span>API</span>
                             </a>
                         </li>
-                        <!-- jhipster-needle-add-element-to-admin-menu - JHipster will add entities to the admin menu here -->
                     </ul>
                 </li>
             </ul>
