--- a/src/main/webapp/scss/app/init.scss
+++ b/src/main/webapp/scss/app/init.scss
@@ -8,12 +8,14 @@
     url('../fonts/BMJUA.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
 
-* {
-    background-color: #fff;
+body, h1, h2, h3, h4, h5, h6 {
     font-family: 'bmjua', Arial, sans-serif;
     line-height: 1.6;
     word-spacing: 2px;
-    font-size: 16px;
+}
+
+body{
+    background-color: #fff;
 }
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
